<resources>
    <string name="app_name">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_loading">Getting weather data</string>
    <string name="updated">Updated</string>
    <string name="refresh">Refresh</string>
    <string name="chonqing">Chongqing</string>
    <string name="beijing">Beijing</string>
    <string name="shanghai">Shanghai</string>
    <string name="netErr">Network error</string>
</resources>