<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--orderInCategory数值较小者排序靠上-->
    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_chongqing"
        android:title="@string/chonqing"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_beijing"
        android:title="@string/beijing"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_shanghai"
        android:title="@string/shanghai"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="500"
        app:showAsAction="never"
        />
</menu>
